--- a/css/home.css
+++ b/css/home.css
@@ -48,23 +48,31 @@
   margin-bottom: 20px;
 
 }
+.border_card p{
+  color:red;
+}
 /* Tạo boder và bg cho mục contact*/
-.boder_contact{
-  border: 2px solid #FFC107;
+
+.fast_access{
+  margin-left: 5px;
+  margin-top: 20px;
+  width: 16.5rem;
+  border: 2px solid #AAAAAA;
+  background-color: white;
 
 }
+.list_access li{
+      list-style-type: none;
+  width: 14rem;
+  border-bottom: 1px dashed #BCBCBC;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: 20px;
+  padding-bottom: 5px;
 
-.boder_contact_li a{
-  border-bottom: 2px solid #FFC107;
 }
-.bg_li{
-  background-color: #FFFCCE;
-line-height: 5px;
-}
-.bg_li:hover{
-  background-color: #16F3FF;
-  border-right: 6px solid #164782 ;
-  color: white;
+.list_access a{
+  color: black;
 }
 .banerr1{
   width: 16.5rem;
@@ -72,6 +80,45 @@ line-height: 5px;
     overflow: hidden;
     margin-top: 20px;
 }
+/* làm 3 ảnh giới thiệu*/
+.section_1{
+  margin-top: 20px;
+}
+.section_1 img{
+  width: 350px;
+  height: 480px;
+  padding-bottom: 30px;
+
+}
+.intro1{
+    overflow: hidden;
+}
+.intro1 img{
+  width: 100%;
+  height: 100%;
+
+  transition-duration: 0.5s;
+    /* Safari & Google Chrome */
+    -webkit-transition-duration: 0.5s;
+    /* Mozilla Firefox */
+    -moz-transition-duration: 0.5s;
+    /* Opera */
+    -o-transition-duration: 0.5s;
+    /* IE 9 */
+    -ms-transition-duration: 0.5s;
+
+}
+.intro1 img:hover{
+
+    transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        -moz-transform: scale(1.2);
+        -o-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+    cursor: pointer;
+
+}
+
 /* làm banner to ra khi hover */
 .banner1 {
   width: 100%;
@@ -108,6 +155,7 @@ line-height: 5px;
   width: 100%;
   height: 100%;
 }
+
 .mission{
 
    background-color: #F7F5F4;
