--- a/css/styles1.css
+++ b/css/styles1.css
@@ -16,8 +16,8 @@ a:hover{
 }
 @media (min-width: 992px) .navi-css{
         flex-direction: row;
-        padding-right: .5rem;
-        padding-left: .5rem;
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
 }
 
 #main{
