--- a/css/news.css
+++ b/css/news.css
@@ -44,6 +44,12 @@
 
 /* làm ảnh phóng to khi hover  */
 .hv{
+
+  box-shadow: 5px 5px 5px #666;
+  -moz-box-shadow: 5px 5px 5px #666;
+  -webkit-box-shadow: 5px 5px 5px #666;
+  margin-right: 5px;
+  padding: 20px;
   width: 100%;
 height: 100%;
 transition-duration: 0.5s;
@@ -102,6 +108,13 @@ border: 1px solid #f2f296;
   border-right : 5px solid orange;
    background-color: #ffb26b;
    color: white;
+}
+.section_new h3{
+  margin-top: 80px;
+  border-top: 2px solid #BDBEC2;
+ border-bottom:  2px solid #BDBEC2;
+ padding-top: 20px;
+ padding-bottom: 20px;
 }
 @media only screen and (max-width: 576px) {
   .responsive {
