--- a/css/news.css
+++ b/css/news.css
@@ -116,6 +116,11 @@ border: 1px solid #f2f296;
  padding-top: 20px;
  padding-bottom: 20px;
 }
+
+.section_new_1{
+  border-bottom: 2px solid #BDBEC2;
+ margin-top: 20px;
+}
 @media only screen and (max-width: 576px) {
   .responsive {
     width: 100%;
