--- a/css/home.css
+++ b/css/home.css
@@ -122,32 +122,13 @@
 
 /* làm banner to ra khi hover */
 .banner1 {
+  border: 1px solid #A8A3A3;
+  padding: 5px;
   width: 100%;
   height: 100%;
 
-  transition-duration: 0.5s;
-    /* Safari & Google Chrome */
-    -webkit-transition-duration: 0.5s;
-    /* Mozilla Firefox */
-    -moz-transition-duration: 0.5s;
-    /* Opera */
-    -o-transition-duration: 0.5s;
-    /* IE 9 */
-    -ms-transition-duration: 0.5s;
 
 }
-
-.banner1:hover{
-
-    transform: scale(1.2);
-        -webkit-transform: scale(1.2);
-        -moz-transform: scale(1.2);
-        -o-transform: scale(1.2);
-        -ms-transform: scale(1.2);
-    cursor: pointer;
-
-}
-
 .earth{
   width: 368px;
   height: 100%;
@@ -255,4 +236,11 @@ color: orange;
 }
 #hao{
   padding-left: 180px;
+}
+.history img{
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.history{
+  margin-bottom: 50px;
 }
