--- a/css/contact.css
+++ b/css/contact.css
@@ -118,7 +118,7 @@
 	width: 250px;
 	height: 35px;
 	font-weight: bolder;
-	background-color: #0087F7;
+	background-color: #007FF7;
 	color: #FFFFFF;
 }
 .container .Contact-map .map {
