--- a/css/styles1.css
+++ b/css/styles1.css
@@ -79,8 +79,9 @@ a.nav-link{
 }
 .header-section .tobica-login .btn-warning{
     margin: 11px;
-    margin-left: 100px;
+    margin-left: 160px;
     display: block;
+    float: left;
 }
 .tobica-logo{
 	float: left;
