--- a/css/home.css
+++ b/css/home.css
@@ -247,3 +247,16 @@ color: orange;
 .history{
   margin-bottom: 50px;
 }
+.comment{
+  width: 900px;
+  height: 120px;
+}
+.comment_1{
+  width: 100px;
+  float: left;
+}
+.comment_2{
+width: 610px;
+float: left;
+margin-top: 20px;
+}
