--- a/css/news.css
+++ b/css/news.css
@@ -11,7 +11,10 @@
   width: 150px;
   height: 150px;
 }
-
+#book{
+  border: 1px solid #999494;
+  padding: 5px;
+}
 /* kích thước  Quang cáo  */
 .banner img{
   width: 50px;
