--- a/css/registration.css
+++ b/css/registration.css
@@ -1,1 +1,59 @@
 @charset "utf-8";
+.wrapper .container .instruct {
+	margin-top: 100px;
+	margin-bottom: 30px;
+	text-align: center;
+}
+.container .instruct img {
+	margin-bottom: 30px;
+}
+.container .instruct h3 {
+	color: #FC1014;
+	font-weight: bolder;
+}
+.wrapper .container .mainform {
+	width: 100%;
+	height: auto;
+	padding-top: 5px;
+	padding-right: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	margin-bottom: 15px;
+	text-align: center;
+}
+.mainform form .subform {
+	width: 50%;
+	height: auto;
+	float: left;
+	margin-bottom: 20px;
+	padding-right: 20px;
+	padding-left: 20px;
+	text-align: left;
+	padding-bottom: 20px;
+}
+form p  {
+	height: 12px;
+	margin-top: 30px;
+
+}
+form p span {
+	font-size: small;
+	color: #FB0A0E;
+}
+form input  {
+	width: 100%;
+	height: 35px;
+}
+form select  {
+	width: 100%;
+	height: 35px;
+}
+.mainform form button {
+	margin-bottom: 15px;
+	width: 200px;
+	height: 40px;
+	border-radius: 5px;
+	background-color: #004DB8;
+	color: #FFFFFF;
+	margin-top: 50px;
+}
