--- a/css/contact.css
+++ b/css/contact.css
@@ -1,11 +1,13 @@
 @charset "utf-8";
 .wrapper .container .Center-Contact {
 	width: 100%;
-	height: 600px;
+	height: 620px;
 	padding-top: 5px;
 	padding-right: 5px;
-	padding-bottom: 5px;
+	padding-bottom: 25px;
 	padding-left: 5px;
+	border-bottom: thick solid #B4B4B4;
+	margin-bottom: 25px;
 }
 
 .wrapper .container h3 {
@@ -59,7 +61,8 @@
 	padding-right: 10px;
 	padding-bottom: 10px;
 	padding-left: 10px;
-	border-radius: 4px;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
 }
 .Contact .content p {
 	line-height: 10px;
@@ -82,14 +85,15 @@
 	text-align: center;
 	font-weight: bold;
 	width: 150px;
-	border-radius: 5px;
-	background-color: #F88F59;
+	border-radius: 10px;
+	background-color: #337AB7;
 	height: 40px;
+	color: #FFFFFF;
 
 }
 .content form a {
 	font-weight: bold;
-	color: #222222;
+	color: #FFFFFF;
 
 }
 .content form #align {
@@ -127,4 +131,19 @@
 	height: 95%;
 	width: 100%;
 	border: 1px solid #6F6F6F;
+}
+.nav.nav-pills li a {
+	background-color: #337AB7;
+	margin-right: 5px;
+	padding-left: 50px;
+	padding-right: 50px;
+	border-radius: 4px;
+	font-size: 20px;
+	font-weight: normal;
+	color: #FFFFFF;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.wrapper .container .nav.nav-pills {
+	margin-bottom: 10px;
 }
