--- a/css/registration.css
+++ b/css/registration.css
@@ -52,7 +52,7 @@ form select  {
 	margin-bottom: 15px;
 	width: 200px;
 	height: 40px;
-	border-radius: 5px;
-	background-color: #004DB8;
+	border-radius: 8px;
+	background-color: #337AB7;
 	color: #FFFFFF;
 }
