sửa background của chữ trong slideshow

--- a/css/home.css
+++ b/css/home.css
@@ -54,7 +54,7 @@
   height: 500px;
 }
 .tobica-slideshow h2{
-  background-color: #f3f3f3;
+  background-color: rgb(229, 229, 229, 0.5);
   color: black;
 }
 /* Tạo khung cho ảnh */
