--- a/css/course.css
+++ b/css/course.css
@@ -124,3 +124,10 @@ border-radius: 20px;
   color:#3D3D3D;
   padding: 5px;
 }
+.banner{
+  width: 260px;
+  padding: 2px;
+  margin-left: 2px;
+  margin-top: 10px;
+  border: 1px solid #CECCCC;
+}
